tidos/tests/control_tags/panics/for_loop_missing_binding.rs
use tidos::view;

fn for_loop_missing_binding() {
	let items = vec!["a", "b"];
	view! {
		{#for in items}
			<p>{item}</p>
		{/for}
	};
}

fn main() {}
